HTBHF-2676 Use CombinedIdentityAndEligibilityResponse as the response from v2 eligibility check.
