# swagger.yml
@@ -69,7 +69,7 @@ paths:
         "200":
           description: "OK"
           schema:
-            $ref: "#/definitions/IdentityAndEligibilityResponse"
+            $ref: "#/definitions/CombinedIdentityAndEligibilityResponse"
         "201":
           description: "Created"
         "401":
@@ -107,39 +107,7 @@ definitions:
         description: "The date of birth of the child"
     title: "ChildDTO"
     description: "A child in a household."
-  EligibilityResponse:
-    type: "object"
-    properties:
-      children:
-        type: "array"
-        items:
-          $ref: "#/definitions/ChildDTO"
-      dwpHouseholdIdentifier:
-        type: "string"
-      eligibilityStatus:
-        type: "string"
-        enum:
-        - "ELIGIBLE"
-        - "INELIGIBLE"
-        - "PENDING"
-        - "NO_MATCH"
-        - "ERROR"
-        - "DUPLICATE"
-      hmrcHouseholdIdentifier:
-        type: "string"
-      numberOfChildrenUnderFour:
-        type: "integer"
-        format: "int32"
-        example: 1
-        description: "The number of children under 4 that the person has (which will\
-          \ include the number of children under 1)"
-      numberOfChildrenUnderOne:
-        type: "integer"
-        format: "int32"
-        example: 1
-        description: "The number of children under 1 that the person has"
-    title: "EligibilityResponse"
-  IdentityAndEligibilityResponse:
+  CombinedIdentityAndEligibilityResponse:
     type: "object"
     properties:
       addressLine1Match:
@@ -163,6 +131,8 @@ definitions:
         type: "array"
         items:
           $ref: "#/definitions/LocalDate"
+      dwpHouseholdIdentifier:
+        type: "string"
       eligibilityStatus:
         type: "string"
         enum:
@@ -178,7 +148,7 @@ definitions:
         - "not_supplied"
         - "invalid_format"
         - "not_set"
-      householdIdentifier:
+      hmrcHouseholdIdentifier:
         type: "string"
       identityStatus:
         type: "string"
@@ -221,7 +191,39 @@ definitions:
         - "jobseekers_allowance"
         - "pension_credit"
         - "not_set"
-    title: "IdentityAndEligibilityResponse"
+    title: "CombinedIdentityAndEligibilityResponse"
+  EligibilityResponse:
+    type: "object"
+    properties:
+      children:
+        type: "array"
+        items:
+          $ref: "#/definitions/ChildDTO"
+      dwpHouseholdIdentifier:
+        type: "string"
+      eligibilityStatus:
+        type: "string"
+        enum:
+        - "ELIGIBLE"
+        - "INELIGIBLE"
+        - "PENDING"
+        - "NO_MATCH"
+        - "ERROR"
+        - "DUPLICATE"
+      hmrcHouseholdIdentifier:
+        type: "string"
+      numberOfChildrenUnderFour:
+        type: "integer"
+        format: "int32"
+        example: 1
+        description: "The number of children under 4 that the person has (which will\
+          \ include the number of children under 1)"
+      numberOfChildrenUnderOne:
+        type: "integer"
+        format: "int32"
+        example: 1
+        description: "The number of children under 1 that the person has"
+    title: "EligibilityResponse"
   PersonDTO:
     type: "object"
     required:
